--- a/template/index2.html
+++ b/template/index2.html
@@ -72,7 +72,7 @@
         <div class="sidebar" id="sidebar">
             <ul class="nav nav-list">
                 <li class="active">
-                    <a href="index.html">
+                    <a href="index">
                         <i class="icon-dashboard"></i>
                         <span class="menu-text"> 控制台 </span>
                     </a>
@@ -87,16 +87,16 @@
                 <li>
                     <a href="#" class="dropdown-toggle">
                         <i class="icon-desktop"></i>
-                        <span class="menu-text">服务监控 </span>
+                        <span class="menu-text">Images</span>
 
                         <b class="arrow icon-angle-down"></b>
                     </a>
 
                     <ul class="submenu">
                         <li>
-                            <a href="monitor.html">
+                            <a href="images">
                                 <i class="icon-double-angle-right"></i>
-                                监控页
+                                ImageInfo
                             </a>
                         </li>
                         <li>
@@ -131,7 +131,7 @@
                 <li>
                     <a href="#" class="dropdown-toggle">
                         <i class="icon-list"></i>
-                        <span class="menu-text">数据查询 </span>
+                        <span class="menu-text">Containers </span>
 
                         <b class="arrow icon-angle-down"></b>
                     </a>
@@ -242,7 +242,7 @@
                         <i class="icon-file-alt"></i>
 
 								<span class="menu-text">
-									用户信息
+									Info
 									<span class="badge badge-primary ">5</span>
 								</span>
 
