--- a/src/template/container.html
+++ b/src/template/container.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>AddContainer---DockerUI</title>
+    <title>DockerUI</title>
     <!-- basic styles -->
     <link href="static/aec/assets/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="static/aec/assets/css/font-awesome.min.css" />
@@ -72,7 +72,7 @@
         <div class="sidebar" id="sidebar">
             <ul class="nav nav-list">
                 <li>
-                    <a href="index.html">
+                    <a href="index">
                         <i class="icon-dashboard"></i>
                         <span class="menu-text"> 控制台 </span>
                     </a>
@@ -87,7 +87,7 @@
                 <li>
                     <a href="#" class="dropdown-toggle">
                         <i class="icon-desktop"></i>
-                        <span class="menu-text">Images </span>
+                        <span class="menu-text">Images</span>
 
                         <b class="arrow icon-angle-down"></b>
                     </a>
@@ -96,9 +96,10 @@
                         <li>
                             <a href="images">
                                 <i class="icon-double-angle-right"></i>
-                                Image
+                                ImageInfo
                             </a>
-                        </li> 
+                        </li>
+                        
                     </ul>
                 </li>
 
@@ -111,7 +112,7 @@
                     </a>
 
                     <ul class="submenu">
-                        <li   class="active">
+                        <li  class="active">
                             <a href="containers">
                                 <i class="icon-double-angle-right"></i>
                                 Container
@@ -119,9 +120,9 @@
                         </li>
                     </ul>
                 </li>
- 
+
                  
-              
+                 
             </ul><!-- /.nav-list -->
 
             <div class="sidebar-collapse" id="sidebar-collapse">
@@ -144,7 +145,7 @@
                         <i class="icon-home home-icon"></i>
                         <a href="#">首页</a>
                     </li>
-                    <li class="active">控制台</li>
+                    <li class="active">ImagesInfo</li>
                 </ul><!-- .breadcrumb -->
 
                 <div class="nav-search" id="nav-search">
@@ -157,12 +158,13 @@
                 </div><!-- #nav-search -->
             </div>
 
-            <div class="page-content"> 
+            <div class="page-content">
                 <div class="row">
-                    <div class="col-xs-12"> 
-					<div class="table-responsive">
+                    <div class="col-xs-12">
+                        <h3 class="header smaller lighter blue">Images</h3>
 
-											<table id="sample-table-1" class="table table-striped table-bordered table-hover">
+                        <div class="table-responsive">
+                            <table id="sample-table-1" class="table table-striped table-bordered table-hover">
 												<thead>
 													<tr>
 														<th class="center">
@@ -557,10 +559,12 @@
 													</tr>
 												</tbody>
 											</table>
-                                   </div>
-					 
-					
-                    </div><!-- /.col -->
+                        </div>
+                    </div>
+                </div>
+
+
+            </div><!-- /.col -->
                 </div><!-- /.row -->
             </div><!-- /.page-content -->
         </div><!-- /.main-content -->
@@ -622,10 +626,11 @@
 <script type="text/javascript" src="static/seajs/sea.js"></script>
 <script type="text/javascript" src="static/seajs/config.js"></script>
 <script type="text/javascript">
-    seajs.use("/static/js/containers", function(index) {
+    seajs.use("/static/js/index", function(index) {
         index.init();
     });
 </script>
+
 </body>
 </html>
 
