--- a/src/template/Images.html
+++ b/src/template/Images.html
@@ -102,11 +102,10 @@
                         
                     </ul>
                 </li>
-
-                <li>
+				<li>
                     <a href="#" class="dropdown-toggle">
                         <i class="icon-list"></i>
-                        <span class="menu-text">Containers </span>
+                        <span class="menu-text">ContainerInfo </span>
 
                         <b class="arrow icon-angle-down"></b>
                     </a>
