--- a/src/template/index2.html
+++ b/src/template/index2.html
@@ -101,12 +101,11 @@
                         </li>
                          
                     </ul>
-                </li>
-
-                <li>
+                </li> 
+				<li>
                     <a href="#" class="dropdown-toggle">
                         <i class="icon-list"></i>
-                        <span class="menu-text">Containers </span>
+                        <span class="menu-text">ContainerInfo </span>
 
                         <b class="arrow icon-angle-down"></b>
                     </a>
