--- a/src/template/container.html
+++ b/src/template/container.html
@@ -101,12 +101,11 @@
                         </li>
                         
                     </ul>
-                </li>
-
-                <li   class="active open">
+                </li> 
+<li  class="active open">
                     <a href="#" class="dropdown-toggle">
                         <i class="icon-list"></i>
-                        <span class="menu-text">Containers </span>
+                        <span class="menu-text">ContainerInfo </span>
 
                         <b class="arrow icon-angle-down"></b>
                     </a>
@@ -120,7 +119,6 @@
                         </li>
                     </ul>
                 </li>
-
                  
                  
             </ul><!-- /.nav-list -->
@@ -162,7 +160,10 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h3 class="header smaller lighter blue">Images</h3>
-
+				<input class="btn btn-primary" type="button" value="添加">
+					
+                        <h3 class="header smaller lighter blue">Images</h3>
+                        <div id="grid"></div> 
                         <div class="table-responsive">
                             <table id="sample-table-1" class="table table-striped table-bordered table-hover">
 												<thead>
@@ -559,7 +560,6 @@
 													</tr>
 												</tbody>
 											</table>
-                        </div>
                     </div>
                 </div>
 
@@ -626,7 +626,7 @@
 <script type="text/javascript" src="static/seajs/sea.js"></script>
 <script type="text/javascript" src="static/seajs/config.js"></script>
 <script type="text/javascript">
-    seajs.use("/static/js/index", function(index) {
+    seajs.use("/static/js/containers", function(index) {
         index.init();
     });
 </script>
