--- a/src/template/index2.html
+++ b/src/template/index2.html
@@ -32,6 +32,7 @@
     <!-- ace settings handler -->
 
     <script src="static/aec/assets/js/ace-extra.min.js"></script>
+	<!--<script src="static/aec/assets/js/ace.min.js"></script>-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
@@ -119,7 +120,23 @@
                         </li>
                     </ul>
                 </li>
-                 
+                 <li>
+                    <a href="#" class="dropdown-toggle">
+                        <i class="icon-list"></i>
+                        <span class="menu-text">System</span>
+
+                        <b class="arrow icon-angle-down"></b>
+                    </a>
+
+                    <ul class="submenu">
+                        <li>
+                            <a href="system">
+                                <i class="icon-double-angle-right"></i>
+                                SystemInfo
+                            </a>
+                        </li>
+                    </ul>
+                </li>
             </ul><!-- /.nav-list -->
 
             <div class="sidebar-collapse" id="sidebar-collapse">
