--- a/src/template/Images.html
+++ b/src/template/Images.html
@@ -119,7 +119,23 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#" class="dropdown-toggle">
+                        <i class="icon-list"></i>
+                        <span class="menu-text">System</span>
 
+                        <b class="arrow icon-angle-down"></b>
+                    </a>
+
+                    <ul class="submenu">
+                        <li>
+                            <a href="system">
+                                <i class="icon-double-angle-right"></i>
+                                SystemInfo
+                            </a>
+                        </li>
+                    </ul>
+                </li>
                  
                  
             </ul><!-- /.nav-list -->
