docker info page

--- a/src/template/container.html
+++ b/src/template/container.html
@@ -90,57 +90,23 @@
                 </li>
 
                 <li>
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-desktop"></i>
+                    <a href="images">
+                        <i class="icon-dashboard"></i>
                         <span class="menu-text">Images</span>
-
-                        <b class="arrow icon-angle-down"></b>
                     </a>
-
-                    <ul class="submenu">
-                        <li>
-                            <a href="images">
-                                <i class="icon-double-angle-right"></i>
-                                ImageInfo
-                            </a>
-                        </li>
-                        
-                    </ul>
                 </li> 
-               <li  class="active open">
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-list"></i>
-                        <span class="menu-text">ContainerInfo </span>
-
-                        <b class="arrow icon-angle-down"></b>
+				<li class="active">
+                    <a href="containers">
+                        <i class="icon-dashboard"></i>
+                        <span class="menu-text">Containers</span>
                     </a>
-
-                    <ul class="submenu">
-                        <li  class="active">
-                            <a href="containers">
-                                <i class="icon-double-angle-right"></i>
-                                Container
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                 <li>
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-list"></i>
-                        <span class="menu-text">System</span>
-
-                        <b class="arrow icon-angle-down"></b>
+                </li>  
+				<li>
+                    <a href="system">
+                        <i class="icon-dashboard"></i>
+                        <span class="menu-text"> SystemInfo </span>
                     </a>
-
-                    <ul class="submenu">
-                        <li>
-                            <a href="system">
-                                <i class="icon-double-angle-right"></i>
-                                SystemInfo
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                </li> 
                  
             </ul><!-- /.nav-list -->
 
@@ -181,6 +147,12 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h3 class="header smaller lighter blue">Images</h3>  
+						<table cellpadding="0" cellspacing="0" border="0" class="display" id="example">
+						    <thead>
+							</thead>
+							<tbody>
+							</tbody>
+						</table>
                         <div id="grid"></div>  
                     </div><!-- /.col -->
                 </div><!-- /.row -->
