--- a/src/template/Images.html
+++ b/src/template/Images.html
@@ -84,58 +84,24 @@
                     </a>
                 </li>
 
-                <li  class="active open">
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-desktop"></i>
+                <li class="active">
+                    <a href="images">
+                        <i class="icon-dashboard"></i>
                         <span class="menu-text">Images</span>
-
-                        <b class="arrow icon-angle-down"></b>
                     </a>
-
-                    <ul class="submenu">
-                        <li  class="active">
-                            <a href="images">
-                                <i class="icon-double-angle-right"></i>
-                                ImageInfo
-                            </a>
-                        </li>
-                        
-                    </ul>
-                </li>
+                </li> 
 				<li>
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-list"></i>
-                        <span class="menu-text">ContainerInfo </span>
-
-                        <b class="arrow icon-angle-down"></b>
+                    <a href="containers">
+                        <i class="icon-dashboard"></i>
+                        <span class="menu-text">Containers</span>
                     </a>
-
-                    <ul class="submenu">
-                        <li>
-                            <a href="containers">
-                                <i class="icon-double-angle-right"></i>
-                                Container
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-list"></i>
-                        <span class="menu-text">System</span>
-
-                        <b class="arrow icon-angle-down"></b>
+                </li>  
+				<li>
+                    <a href="system">
+                        <i class="icon-dashboard"></i>
+                        <span class="menu-text"> SystemInfo </span>
                     </a>
-
-                    <ul class="submenu">
-                        <li>
-                            <a href="system">
-                                <i class="icon-double-angle-right"></i>
-                                SystemInfo
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                </li> 
                  
                  
             </ul><!-- /.nav-list -->
