--- a/src/template/index2.html
+++ b/src/template/index2.html
@@ -86,56 +86,22 @@
                 </li>
 
                 <li>
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-desktop"></i>
+                    <a href="images">
+                        <i class="icon-dashboard"></i>
                         <span class="menu-text">Images</span>
-
-                        <b class="arrow icon-angle-down"></b>
                     </a>
-
-                    <ul class="submenu">
-                        <li>
-                            <a href="images">
-                                <i class="icon-double-angle-right"></i>
-                                ImageInfo
-                            </a>
-                        </li>
-                         
-                    </ul>
                 </li> 
 				<li>
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-list"></i>
-                        <span class="menu-text">ContainerInfo </span>
-
-                        <b class="arrow icon-angle-down"></b>
+                    <a href="containers">
+                        <i class="icon-dashboard"></i>
+                        <span class="menu-text">Containers</span>
                     </a>
-
-                    <ul class="submenu">
-                        <li>
-                            <a href="containers">
-                                <i class="icon-double-angle-right"></i>
-                                Container
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                 <li>
-                    <a href="#" class="dropdown-toggle">
-                        <i class="icon-list"></i>
-                        <span class="menu-text">System</span>
-
-                        <b class="arrow icon-angle-down"></b>
+                </li>  
+				<li>
+                    <a href="system">
+                        <i class="icon-dashboard"></i>
+                        <span class="menu-text"> SystemInfo </span>
                     </a>
-
-                    <ul class="submenu">
-                        <li>
-                            <a href="system">
-                                <i class="icon-double-angle-right"></i>
-                                SystemInfo
-                            </a>
-                        </li>
-                    </ul>
                 </li>
             </ul><!-- /.nav-list -->
 
